test/memory/shannon/memmaxExceedsLineno2.comm-none.good
memmaxExceedsLineno2.chpl:3: error: Exceeded memory limit
